--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -90,6 +90,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-4-14-free-clash.htm">
+					<img src="/uploads/20240228/c38971d27f34eb1a1231acac753c4fee.webp" alt="4月14日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-4-14-free-clash.htm">
+					<h2>4月14日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了韩国、新加坡、欧洲、加拿大、日本、美国、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-4-13-free-clash.htm">
 					<img src="/uploads/20240228/462333cdd7156cdfce9b23a70ece7cac.webp" alt="4月13日→20.9M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接" class="img-responsive" />
 				</a>
@@ -227,22 +243,6 @@
 					<h2>4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了加拿大、欧洲、美国、韩国、日本、香港、新加坡等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-4-4-free-clash-subscribe.htm">
-					<img src="/uploads/20240228/4869d04d2811d27431cc2b8e7d9bab5c.webp" alt="4月4日→21.3M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-4-4-free-clash-subscribe.htm">
-					<h2>4月4日→21.3M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了美国、香港、加拿大、新加坡、日本、欧洲、韩国等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
