--- a/index.html
+++ b/index.html
@@ -115,6 +115,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-4-14-free-clash.htm">
+					<img src="/uploads/20240228/c38971d27f34eb1a1231acac753c4fee.webp" alt="4月14日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-4-14-free-clash.htm">
+					<h2>4月14日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了韩国、新加坡、欧洲、加拿大、日本、美国、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-4-13-free-clash.htm">
 					<img src="/uploads/20240228/462333cdd7156cdfce9b23a70ece7cac.webp" alt="4月13日→20.9M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接" class="img-responsive" />
 				</a>
@@ -412,22 +428,6 @@
 					<h2>3月26日→19.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了欧洲、美国、新加坡、香港、韩国、日本、加拿大等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-3-25-free-ssr-node.htm">
-					<img src="/uploads/20240228/27ea0bf4af43099050c87da981096f79.webp" alt="3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-3-25-free-ssr-node.htm">
-					<h2>3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了香港、日本、韩国、加拿大、新加坡、美国、欧洲等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
